[cube] add preaggregation touch options

--- a/charts/cube/values.yaml
+++ b/charts/cube/values.yaml
@@ -146,6 +146,17 @@ config:
   ##
   topicName:
 
+  ## The number of seconds without a touch before pre-aggregation is considered orphaned and marked for removal.
+  ##
+  touchPreAggTimeout:
+
+  ## If true, it enables dropping pre-aggregations that Refresh Worker doesn't touch within CUBEJS_TOUCH_PRE_AGG_TIMEOUT.
+  ## Pre-aggregations are touched whenever they are rebuilt or a Refresh Worker checks its freshness.
+  ## The first drop will be initiated when the Refresh Worker is able to check freshness for every scheduledRefresh: true pre-aggregation.
+  ## If you have multiple Refresh Workers with different data model versions sharing the same Cube Store cluster, then touches from both refresh workers are respected.
+  ##
+  dropPreAggWithoutTouch:
+
   ## The config volumes
   ## Will be used to both api and workers
   volumes: []
