--- a/charts/cubestore/values.yaml
+++ b/charts/cubestore/values.yaml
@@ -276,9 +276,10 @@ router:
   ##
   nodeSelector: {}
 
-  ## Service Annotations
-  ##
-  service: {}
+  service:
+    ## Additional custom annotations for router service
+    ##
+    annotations: {}
 
   ## Extra environment variables to pass on to the pod. The value is evaluated as a template
   ## e.g:
@@ -353,6 +354,11 @@ workers:
   ## Node selector for pod assignment
   ##
   nodeSelector: {}
+
+  service:
+    ## Additional custom annotations for workers service
+    ##
+    annotations: {}
 
   ## Extra environment variables to pass on to the pod. The value is evaluated as a template
   ## e.g:
