[cubestore] add Annotations and Environment Variables (#18)
Signed-off-by: Aaron Sproul <aaron@ternary.app>
Co-authored-by: Luc Vauvillier <luc.vauvillier@gmail.com>

--- a/charts/cubestore/values.yaml
+++ b/charts/cubestore/values.yaml
@@ -288,6 +288,19 @@ router:
   ##
   nodeSelector: {}
 
+  service:
+    ## Additional custom annotations for router service
+    ##
+    annotations: {}
+
+  ## Extra environment variables to pass on to the pod. The value is evaluated as a template
+  ## e.g:
+  ## extraEnvVars:
+  ##   - name: FOO
+  ##     value: "bar"
+  ##
+  extraEnvVars: []
+
 workers:
   ## Service account for cubestore workers to use
   ##
@@ -353,3 +366,16 @@ workers:
   ## Node selector for pod assignment
   ##
   nodeSelector: {}
+
+  service:
+    ## Additional custom annotations for workers service
+    ##
+    annotations: {}
+
+  ## Extra environment variables to pass on to the pod. The value is evaluated as a template
+  ## e.g:
+  ## extraEnvVars:
+  ##   - name: FOO
+  ##     value: "bar"
+  ##
+  extraEnvVars: []
