--- a/charts/cubestore/templates/router/service.yaml
+++ b/charts/cubestore/templates/router/service.yaml
@@ -8,9 +8,14 @@ metadata:
     {{- if .Values.commonLabels }}
     {{- toYaml .Values.commonLabels | nindent 4 }}
     {{- end }}
-  {{- if .Values.commonAnnotations }}
+  {{- if (or .Values.commonAnnotations .Values.router.service.annotations) }}
   annotations:
+    {{- if .Values.commonAnnotations }} 
     {{- toYaml .Values.commonAnnotations | nindent 4 }}
+    {{- end }}
+    {{- if .Values.router.service.annotations }}
+    {{- toYaml .Values.router.service.annotations | nindent 4 }}
+    {{- end }}
   {{- end }}
 spec:
   ports:
