--- a/charts/cube/templates/worker/deployment.yaml
+++ b/charts/cube/templates/worker/deployment.yaml
@@ -31,6 +31,11 @@ spec:
       {{- toYaml .Values.commonAnnotations | nindent 8 }}
       {{- end }}
     spec:
+      {{- if .Values.securityContext.enabled }}
+      securityContext:
+        runAsUser: {{ .Values.securityContext.runAsUser }}
+        fsGroup: {{ .Values.securityContext.fsGroup }}
+      {{- end }}
       serviceAccountName: {{ template "cube.worker.serviceAccountName" . }}
       {{- with .Values.image.pullSecrets }}
       imagePullSecrets:
@@ -122,5 +127,5 @@ spec:
       volumes:
         {{- toYaml .Values.config.volumes | nindent 8 }}
       {{- end }}
-
+      
 {{- end }}
