--- a/charts/cubestore/templates/pvc.yaml
+++ b/charts/cubestore/templates/pvc.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: {{ printf "%s-remote-storage" (include "cubestore.fullname" .) }}
-  labels: 
+  labels:
     app.kubernetes.io/component: remote-storage
     {{- include "cubestore.selectorLabels" . | nindent 4 }}
     {{- if .Values.commonLabels }}
@@ -11,6 +11,9 @@ metadata:
     {{- end }}
   {{- if or .Values.remoteDir.persistence.annotations (eq .Values.remoteDir.persistence.resourcePolicy "keep") .Values.commonAnnotations }}
   annotations:
+    {{- if .Values.securityContext.enabled }}
+    pv.beta.kubernetes.io/gid: {{ .Values.securityContext.fsGroup  | quote }}
+    {{- end }}
     {{- if .Values.remoteDir.persistence.annotations }}
     {{- toYaml .Values.remoteDir.persistence.annotations | nindent 4 }}
     {{- end }}
@@ -25,11 +28,11 @@ spec:
   accessModes:
   {{- range .Values.remoteDir.persistence.accessModes }}
     - {{ . | quote }}
-  {{- end }}  
+  {{- end }}
   resources:
     requests:
       storage: {{ .Values.remoteDir.persistence.size }}
   {{- if .Values.remoteDir.persistence.storageClass }}
   storageClassName: {{ .Values.remoteDir.persistence.storageClass }}
-  {{- end }}
+  {{- end}}
 {{- end }}
