--- a/charts/cubestore/templates/router/statefulset.yaml
+++ b/charts/cubestore/templates/router/statefulset.yaml
@@ -35,6 +35,11 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- if .Values.securityContext.enabled }}
+      securityContext:
+        runAsUser: {{ .Values.securityContext.runAsUser }}
+        fsGroup: {{ .Values.securityContext.fsGroup }}
+      {{- end }}
       containers:
         - name: cubestore
           {{- if .Values.image.tag }}
