Add init containers (#1)

--- a/charts/cube/values.yaml
+++ b/charts/cube/values.yaml
@@ -575,6 +575,10 @@ api:
 
   apiCount: 1
 
+  ## Init containers to run before starting the main container
+  ##
+  initContainers: []
+
   ## Affinity for pod assignment
   ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
   ##
