--- a/charts/cube/templates/api/deployment.yaml
+++ b/charts/cube/templates/api/deployment.yaml
@@ -40,6 +40,9 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- if .Values.api.initContainers }}
+      initContainers: {{- tpl (toYaml .Values.api.initContainers) . | nindent 6 }}
+      {{- end }}
       containers:
         - name: cube
           {{- if .Values.image.tag }}
