--- a/charts/cube/values.yaml
+++ b/charts/cube/values.yaml
@@ -170,16 +170,26 @@ config:
   ## The config volumes
   ## Will be used to both api and worker
   volumes: []
+  ## In case you want to use configMap
   # - name: schema
   #   configMap:
   #     name: schema
+  ## In case you want to use init container
+  # - name: data-volume
+  #   emptyDir: {}
 
   ## The config volumeMounts
   ## Will be used to both api and worker
   volumeMounts: []
+  ## In case you want to use configMap
   # - name: schema
   #   readOnly: true
   #   mountPath: /cube/conf/schema
+  ## In case you want to use init container
+  # - name: data-volume
+  #   readOnly: true
+  #   mountPath: /cube/conf/schema
+  #   subPath: model
 
 redis:
   ## The host URL for a Redis server
@@ -574,6 +584,19 @@ api:
     annotations: {}
 
   apiCount: 1
+
+  ## Init containers to run before starting the main container
+  ## We can use an empty volume and volume mounts to copy data
+  ## from a remote location like s3 to the local volume
+  ##
+  initContainers: []
+  # - name: aws-init-container
+  #   image: amazon/aws-cli:latest
+  #   command: ['sh', '-c', 'aws s3 cp s3://your-s3-bucket/your-data /path/to/volume/mount']
+  #   volumeMounts:
+  #   - name: data-volume
+  #     mountPath: /path/to/volume/mount
+
 
   ## Affinity for pod assignment
   ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
