all but ducks and athena

--- a/charts/cube/values.yaml
+++ b/charts/cube/values.yaml
@@ -384,6 +384,9 @@ datasources:
         ## The AWS Access Key ID to use for the export bucket.
         ##
         key:
+        # keyFromSecret:
+        #   name:
+        #   key:
 
         ## The AWS Secret Access Key to use for the export bucket.
         ##
