--- a/charts/cube/templates/api/deployment.yaml
+++ b/charts/cube/templates/api/deployment.yaml
@@ -66,7 +66,10 @@ spec:
             {{- if .Values.extraEnvVars }}
             {{- include "cube.tplvalues.render" (dict "value" .Values.extraEnvVars "context" $) | nindent 12 }}
             {{- end }}
-          {{- if or .Values.extraEnvVarsFromConfigMap .Values.extraEnvVarsFromSecret }}
+            {{- if .Values.api.extraEnvVars }}
+            {{- include "cube.tplvalues.render" (dict "value" .Values.api.extraEnvVars "context" $) | nindent 12 }}
+            {{- end }}
+          {{- if or .Values.extraEnvVarsFromConfigMap .Values.extraEnvVarsFromSecret .Values.api.extraEnvVarsFromConfigMap .Values.api.extraEnvVarsFromSecret }}
           envFrom:
             {{- if .Values.extraEnvVarsFromConfigMap }}
             - configMapRef:
@@ -75,6 +78,14 @@ spec:
             {{- if .Values.extraEnvVarsFromSecret }}
             - secretRef:
                 name: {{ include "cube.tplvalues.render" (dict "value" .Values.extraEnvVarsFromSecret "context" $) }}
+            {{- end }}
+            {{- if .Values.api.extraEnvVarsFromConfigMap }}
+            - configMapRef:
+                name: {{ include "cube.tplvalues.render" (dict "value" .Values.api.extraEnvVarsFromConfigMap "context" $) }}
+            {{- end }}
+            {{- if .Values.api.extraEnvVarsFromSecret }}
+            - secretRef:
+                name: {{ include "cube.tplvalues.render" (dict "value" .Values.api.extraEnvVarsFromSecret "context" $) }}
             {{- end }}
           {{- end }}
           {{- if .Values.api.livenessProbe.enabled }}
