--- a/charts/cubestore/templates/router/statefulset.yaml
+++ b/charts/cubestore/templates/router/statefulset.yaml
@@ -13,6 +13,7 @@ metadata:
   {{- end }}
 spec:
   serviceName: {{ printf "%s-router" (include "cubestore.fullname" .) }}
+  replicas: 1
   selector:
     matchLabels:
       app.kubernetes.io/component: router
