--- a/charts/cube/templates/worker/deployment.yaml
+++ b/charts/cube/templates/worker/deployment.yaml
@@ -122,6 +122,9 @@ spec:
           volumeMounts:
             {{- toYaml .Values.config.volumeMounts | nindent 12 }}
           {{- end }}
+      {{- if .Values.config.sidecarContainers }}
+        {{- toYaml .Values.config.sidecarContainers | nindent 8 }}
+      {{- end }}
       {{- if .Values.worker.affinity }}
       affinity:
         {{- toYaml .Values.worker.affinity | nindent 8 }}
