--- a/charts/cubestore/templates/workers/statefulset.yaml
+++ b/charts/cubestore/templates/workers/statefulset.yaml
@@ -164,6 +164,9 @@ spec:
       nodeSelector:
         {{- toYaml .Values.workers.nodeSelector | nindent 8 }}
       {{- end }}
+      {{- if .Values.workers.priorityClassName }}
+      priorityClassName: {{ .Values.workers.priorityClassName }}
+      {{- end }}
       {{- if .Values.workers.spreadConstraints }}
       topologySpreadConstraints:
         {{- toYaml .Values.workers.spreadConstraints | nindent 8 }}
