--- a/charts/cubestore/values.yaml
+++ b/charts/cubestore/values.yaml
@@ -268,6 +268,10 @@ router:
   ##
   metaPort: 9999
 
+  ## Custom hostname for the router service (defaults to "<fullname>-router")
+  ##
+  metaHost: ""
+
   ## The port for Cube Store to listen to connections on, for example, 3306
   ##
   mysqlPort:
