--- a/charts/cube/templates/worker/deployment.yaml
+++ b/charts/cube/templates/worker/deployment.yaml
@@ -8,9 +8,14 @@ metadata:
     {{- if .Values.commonLabels }}
     {{- toYaml .Values.commonLabels | nindent 4 }}
     {{- end }}
-  {{- if .Values.commonAnnotations }}
+  {{- if or .Values.commonAnnotations .Values.api.annotations }}
   annotations:
+    {{- if .Values.commonAnnotations }}
     {{- toYaml .Values.commonAnnotations | nindent 4 }}
+    {{- end }}
+    {{- if .Values.worker.annotations }}
+    {{- toYaml .Values.worker.annotations | nindent 4 }}
+    {{- end }}
   {{- end }}
 spec:
   replicas: 1
@@ -26,9 +31,14 @@ spec:
         {{- if .Values.commonLabels }}
         {{- toYaml .Values.commonLabels | nindent 8 }}
         {{- end }}
-      {{- if .Values.commonAnnotations }}
+      {{- if or .Values.commonAnnotations .Values.api.annotations }}
       annotations:
-      {{- toYaml .Values.commonAnnotations | nindent 8 }}
+        {{- if .Values.commonAnnotations }}
+        {{- toYaml .Values.commonAnnotations | nindent 8 }}
+        {{- end }}
+        {{- if .Values.worker.annotations }}
+        {{- toYaml .Values.worker.annotations | nindent 8 }}
+        {{- end }}
       {{- end }}
     spec:
       {{- if .Values.securityContext.enabled }}
