--- a/charts/cubestore/values.yaml
+++ b/charts/cubestore/values.yaml
@@ -227,6 +227,18 @@ exporter:
     # Name of the key inside Metric mapping ConfigMap.
     mappingConfigMapKey: statsd.mappingConf
 
+    # Custom statsd mappings. If provided, these will be used instead of the default mapping.
+    # Example:
+    # mappings:
+    #   - match: "*.ms"
+    #     name: "cubestore_duration_milliseconds"
+    #     timer_type: histogram
+    #     buckets: [1, 10, 50, 100, 250, 500, 1000, 2000, 5000, 10000]
+    #     match_metric_type: timer
+    #     labels:
+    #       method: "$1"
+    mappings: []
+
   livenessProbe:
     httpGet:
       path: /health
